# Diplom-work-Education-Modules-

./: README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
education_modules/: admin.py  apps.py  models.py  pagination.py  serializers.py  tests.py  urls.py  views.py
education_modules/migrations/: 0001_initial.py
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py
